# openedx-xapi

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  setup.cfg
docker/config/lms/: docker_run_development.py
src/xapi/: apps.py
xapi/: backend.py
