;;
;; Open edX xAPI package
;;
[metadata]
name = openedx-xapi
version = 0.0.1
description = Open edX xAPI plugin
long_description = file:README.md
long_description_content_type = text/markdown
author = Open FUN (France Universite Numerique)
author_email = fun.dev@fun-mooc.fr
url = https://github.com/openfun/openedx-xapi
license = AGPL-3.0
keywords = Django, xAPI, Open edX
classifiers =
    Development Status :: 3 - Alpha
    Framework :: Django
    Framework :: Django :: 1.11
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[options]
include_package_data = true
packages = find:
zip_safe = false

[wheel]
universal = 1
